api-postgresql/api/service-subscription-control-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-control-api
  namespace: subscription-control
spec:
  selector:
    app: subscription-control-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
