api-postgresql/api/route-subscription-control-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: subscription-control-api
  namespace: subscription-control
spec:
  to:
    kind: Service
    name: subscription-control-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
